{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 775,
  "lineage": "290cb7ee-e25a-ad78-d7a8-e3604189d2b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "java10x_sakila_yvelasquez_vpc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-06271fbd1eb2264b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.117.0.0/16",
            "default_network_acl_id": "acl-0f4e360aa9ac79242",
            "default_route_table_id": "rtb-00b7206b78c19c463",
            "default_security_group_id": "sg-021d044fed46eec60",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06271fbd1eb2264b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00b7206b78c19c463",
            "owner_id": "135928476890",
            "tags": {
              "Name": "java10x_sakila_yvelasquez_vpc"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.bastionserver_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "java10x_sakila_yvelasquez_server_bastion_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-086ededb5628b3fe5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086ededb5628b3fe5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cyber-10x-yvelasquez",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0666bd0a76528716a",
            "private_dns": "ip-10-117-3-147.eu-west-1.compute.internal",
            "private_ip": "10.117.3.147",
            "public_dns": "ec2-52-214-147-67.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.214.147.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0611acfa5170304b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002a45ecc053c1c35",
            "tags": {
              "Name": "java10x_sakila_yvelasquez_server_bastion"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_server_bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ba571a179f7b959"
            ]
          },
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf",
            "module.bastionserver_module.aws_security_group.java10x_sakila_yvelasquez_sg_bastion_tf",
            "module.bastionserver_module.aws_subnet.java10x_sakila_yvelasquez_subnet_bastion_tf"
          ]
        }
      ]
    },
    {
      "module": "module.bastionserver_module",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "java10x_sakila_yvelasquez_nacl_bastion_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-082e24f61195a4f32",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.117.2.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "id": "acl-082e24f61195a4f32",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.117.2.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "94.13.81.61/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "135928476890",
            "subnet_ids": [
              "subnet-002a45ecc053c1c35"
            ],
            "tags": {
              "Name": "java10x_sakila_yvelasquez_nacl_bastion"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_nacl_bastion"
            },
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf",
            "module.bastionserver_module.aws_subnet.java10x_sakila_yvelasquez_subnet_bastion_tf"
          ]
        }
      ]
    },
    {
      "module": "module.bastionserver_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "java10x_sakila_yvelasquez_rt_bastion_assoc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0570077cbbd44b2bd",
            "route_table_id": "rtb-054c0058f8051772a",
            "subnet_id": "subnet-002a45ecc053c1c35"
          },
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf",
            "module.bastionserver_module.aws_subnet.java10x_sakila_yvelasquez_subnet_bastion_tf",
            "module.webserver_module.aws_internet_gateway.java10x_sakila_yvelasquez_igw_tf",
            "module.webserver_module.aws_route_table.java10x_sakila_yvelasquez_rt_public_tf"
          ]
        }
      ]
    },
    {
      "module": "module.bastionserver_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "java10x_sakila_yvelasquez_sg_bastion_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-06ba571a179f7b959",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 442,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.117.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-06ba571a179f7b959",
            "ingress": [
              {
                "cidr_blocks": [
                  "94.13.81.61/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "java10x_sakila_yvelasquez_sg_bastion",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "java10x_sakila_yvelasquez_sg_bastion"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_sg_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf"
          ]
        }
      ]
    },
    {
      "module": "module.bastionserver_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "java10x_sakila_yvelasquez_subnet_bastion_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-002a45ecc053c1c35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.117.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002a45ecc053c1c35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "java10x_sakila_yvelasquez_subnet_bastion"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_subnet_bastion"
            },
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf"
          ]
        }
      ]
    },
    {
      "module": "module.databaseserver_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "java10x_sakila_yvelasquez_server_database_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fa06b015e630a7f",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-045c023747d636d80",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdl",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-08db326748ca2d77e",
                "throughput": 0,
                "volume_id": "vol-0088da042ab6d8149",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045c023747d636d80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cyber-10x-yvelasquez",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c213f728ee0b9c6d",
            "private_dns": "ip-10-117-2-151.eu-west-1.compute.internal",
            "private_ip": "10.117.2.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07daaf70b85ccc3ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07b9d2c2935fca488",
            "tags": {
              "Name": "java10x_sakila_yvelasquez_server_database"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_server_database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a58c50b0c063b5ab"
            ]
          },
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf",
            "module.databaseserver_module.aws_security_group.java10x_sakila_yvelasquez_sg_database_tf",
            "module.databaseserver_module.aws_subnet.java10x_sakila_yvelasquez_subnet_private_tf"
          ]
        }
      ]
    },
    {
      "module": "module.databaseserver_module",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "java10x_sakila_yvelasquez_nacl_private_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-0eb2f9e53015ce043",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.117.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.117.3.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              }
            ],
            "id": "acl-0eb2f9e53015ce043",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.117.1.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.117.3.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 22
              }
            ],
            "owner_id": "135928476890",
            "subnet_ids": [
              "subnet-07b9d2c2935fca488"
            ],
            "tags": {
              "Name": "java10x_sakila_yvelasquez_nacl_private"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_nacl_private"
            },
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf",
            "module.databaseserver_module.aws_subnet.java10x_sakila_yvelasquez_subnet_private_tf"
          ]
        }
      ]
    },
    {
      "module": "module.databaseserver_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "java10x_sakila_yvelasquez_sg_database_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0a58c50b0c063b5ab",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a58c50b0c063b5ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.117.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.117.3.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "java10x_sakila_yvelasquez_sg_database",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "java10x_sakila_yvelasquez_sg_database"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_sg_database"
            },
            "timeouts": null,
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf"
          ]
        }
      ]
    },
    {
      "module": "module.databaseserver_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "java10x_sakila_yvelasquez_subnet_private_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-07b9d2c2935fca488",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.117.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b9d2c2935fca488",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "java10x_sakila_yvelasquez_subnet_private"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_subnet_private"
            },
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf"
          ]
        }
      ]
    },
    {
      "module": "module.proxyserver_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "java10x_sakila_yvelasquez_server_proxy_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0dc62e8f50cbe76ad",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc62e8f50cbe76ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cyber-10x-yvelasquez",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04a0ad18ebf0ab1e5",
            "private_dns": "ip-10-117-4-181.eu-west-1.compute.internal",
            "private_ip": "10.117.4.181",
            "public_dns": "ec2-34-245-165-236.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.165.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05667cef05437c51b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0977a3936b598db57",
            "tags": {
              "Name": "java10x_sakila_yvelasquez_server_proxy"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_server_proxy"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dada9826bebf4cbd"
            ]
          },
          "dependencies": [
            "module.proxyserver_module.aws_security_group.java10x_sakila_yvelasquez_sg_proxy_tf",
            "module.proxyserver_module.aws_subnet.java10x_sakila_yvelasquez_subnet_proxy_tf"
          ]
        }
      ]
    },
    {
      "module": "module.proxyserver_module",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "java10x_sakila_yvelasquez_nacl_proxy_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-04894d468aa19e80f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 1000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "id": "acl-04894d468aa19e80f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "94.13.81.61/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "135928476890",
            "subnet_ids": [
              "subnet-0977a3936b598db57"
            ],
            "tags": {
              "Name": "java10x_sakila_yvelasquez_nacl_proxy"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_nacl_proxy"
            },
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf",
            "module.proxyserver_module.aws_subnet.java10x_sakila_yvelasquez_subnet_proxy_tf"
          ]
        }
      ]
    },
    {
      "module": "module.proxyserver_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "java10x_sakila_yvelasquez_rt_assoc_proxy_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e38fe750d34ee8d",
            "route_table_id": "rtb-054c0058f8051772a",
            "subnet_id": "subnet-0977a3936b598db57"
          },
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf",
            "module.proxyserver_module.aws_subnet.java10x_sakila_yvelasquez_subnet_proxy_tf",
            "module.webserver_module.aws_internet_gateway.java10x_sakila_yvelasquez_igw_tf",
            "module.webserver_module.aws_route_table.java10x_sakila_yvelasquez_rt_public_tf"
          ]
        }
      ]
    },
    {
      "module": "module.proxyserver_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "java10x_sakila_yvelasquez_sg_proxy_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0dada9826bebf4cbd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0dada9826bebf4cbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "94.13.81.61/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "java10x_sakila_yvelasquez_sg_proxy",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "java10x_sakila_yvelasquez_sg_web"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_sg_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf"
          ]
        }
      ]
    },
    {
      "module": "module.proxyserver_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "java10x_sakila_yvelasquez_subnet_proxy_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0977a3936b598db57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.117.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0977a3936b598db57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "java10x_sakila_yvelasquez_subnet_proxy"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_subnet_proxy"
            },
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "java10x_sakila_yvelasquez_server_web_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-04acdbc5cfcf2c3dc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04acdbc5cfcf2c3dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cyber-10x-yvelasquez",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-043f23b3698646108",
            "private_dns": "ip-10-117-1-140.eu-west-1.compute.internal",
            "private_ip": "10.117.1.140",
            "public_dns": "ec2-34-240-221-4.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.240.221.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09306f6ec341b75da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b735bdb8b844106a",
            "tags": {
              "Name": "java10x_sakila_yvelasquez_server_web"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_server_web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08cdee647d1569d2a"
            ]
          },
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf",
            "module.webserver_module.aws_security_group.java10x_sakila_yvelasquez_sg_web_tf",
            "module.webserver_module.aws_subnet.java10x_sakila_yvelasquez_subnet_public_tf"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "java10x_sakila_yvelasquez_igw_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-013dc51bd6ee7f18c",
            "id": "igw-013dc51bd6ee7f18c",
            "owner_id": "135928476890",
            "tags": {
              "Name": "java10x_sakila_yvelasquez_igw"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_igw"
            },
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_module",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "java10x_sakila_yvelasquez_nacl_public_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-00338d840b1e578b1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 1000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.117.2.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 3306
              }
            ],
            "id": "acl-00338d840b1e578b1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 8080
              },
              {
                "action": "allow",
                "cidr_block": "94.13.81.61/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "135928476890",
            "subnet_ids": [
              "subnet-0b735bdb8b844106a"
            ],
            "tags": {
              "Name": "java10x_sakila_yvelasquez_nacl_public"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_nacl_public"
            },
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf",
            "module.webserver_module.aws_subnet.java10x_sakila_yvelasquez_subnet_public_tf"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "java10x_sakila_yvelasquez_rt_public_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:route-table/rtb-054c0058f8051772a",
            "id": "rtb-054c0058f8051772a",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013dc51bd6ee7f18c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "java10x_sakila_yvelasquez_rt_public"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_rt_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf",
            "module.webserver_module.aws_internet_gateway.java10x_sakila_yvelasquez_igw_tf"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "java10x_sakila_yvelasquez_rt_assoc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be3a79e108479171",
            "route_table_id": "rtb-054c0058f8051772a",
            "subnet_id": "subnet-0b735bdb8b844106a"
          },
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf",
            "module.webserver_module.aws_internet_gateway.java10x_sakila_yvelasquez_igw_tf",
            "module.webserver_module.aws_route_table.java10x_sakila_yvelasquez_rt_public_tf",
            "module.webserver_module.aws_subnet.java10x_sakila_yvelasquez_subnet_public_tf"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "java10x_sakila_yvelasquez_sg_web_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-08cdee647d1569d2a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.117.2.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-08cdee647d1569d2a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "94.13.81.61/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "java10x_sakila_yvelasquez_sg_web",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "java10x_sakila_yvelasquez_sg_web"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_sg_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "java10x_sakila_yvelasquez_subnet_public_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0b735bdb8b844106a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.117.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b735bdb8b844106a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "java10x_sakila_yvelasquez_subnet_public"
            },
            "tags_all": {
              "Name": "java10x_sakila_yvelasquez_subnet_public"
            },
            "vpc_id": "vpc-06271fbd1eb2264b2"
          },
          "dependencies": [
            "aws_vpc.java10x_sakila_yvelasquez_vpc_tf"
          ]
        }
      ]
    }
  ]
}